Bug 447169 - Sometimes media player applet shows No media playing but there is a media player
Summary: Sometimes media player applet shows No media playing but there is a media player
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Media Player widget (other bugs)
Version First Reported In: master
Platform: openSUSE Linux
: NOR normal
Target Milestone: 1.0
Assignee: Kai Uwe Broulik
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2021-12-18 13:32 UTC by Fushan Wen
Modified: 2021-12-19 08:02 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.24
Sentry Crash Report:


Attachments
No media playing (235.26 KB, image/png)
2021-12-18 13:32 UTC, Fushan Wen
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Fushan Wen 2021-12-18 13:32:35 UTC
Created attachment 144643 [details]
No media playing

SUMMARY
"No media playing" is shown in the media player applet, but the controls are enabled and can play/pause normally.


STEPS TO REPRODUCE
Cannot reproduce stably  


OBSERVED RESULT
No media playing

EXPECTED RESULT
Album cover + song name

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 Bug Janitor Service 2021-12-18 14:58:26 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/1287
Comment 2 Fushan Wen 2021-12-19 08:02:37 UTC
Git commit 49b60051a1e6fc4c1c15210f2488284642d921d4 by Fushan Wen.
Committed on 19/12/2021 at 08:01.
Pushed by fusionfuture into branch 'master'.

dataengines/mpris2: Fix empty player condition

m_proxies does not always contain all players, and a player is added to
m_proxies only when it has a valid proxyPid. But the container is
ensured to be added to one of m_playing, m_paused and m_stopped.

So we need to ensure m_playing, m_paused and m_stopped are all empty
before emitting `playerListEmptied()`.
FIXED-IN: 5.24

M  +1    -1    dataengines/mpris2/multiplexer.cpp

https://invent.kde.org/plasma/plasma-workspace/commit/49b60051a1e6fc4c1c15210f2488284642d921d4